Template: Display contributors data

--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -2,4 +2,10 @@
 
 {% block body %}
     <h1>Hello world</h1>
+    {% for user in users %}
+        <p>id: {{ user.id }}</p>
+        <p>firstname: {{ user.firstname }}</p>
+        <p>lastname: {{ user.lastname }}</p>
+        <p>email: {{ user.email }}</p>
+    {% endfor %}
 {% endblock %}
