--- a/templates/posts/edit.html.twig
+++ b/templates/posts/edit.html.twig
@@ -3,6 +3,9 @@
 <div class="container">
     <h2 class="text-center my-4">Post</h2>
     <hr>
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">{{ message }}</div>
+    {% endfor %}
     {{ form_start(form) }}
         {{ form_row(form.title) }}
         {{ form_row(form.content) }}
