--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -2,12 +2,25 @@
 
 {% block body %}
     <div class="container">
-        <h1>Hello world</h1>
-        {% for user in users %}
-            <p>id: {{ user.id }}</p>
-            <p>firstname: {{ user.firstname }}</p>
-            <p>lastname: {{ user.lastname }}</p>
-            <p>email: {{ user.email }}</p>
-        {% endfor %}
+        <h2 class="text-center my-4">Post Listing</h2>
+        <hr>
+        <div class="row">
+            {% for post in posts %}
+                <div class="col-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">{{ post.title }}</h5>
+                            <p class="card-text flex-fill">{{ post.content }}</p>
+                            <a class="btn btn-success" style="width:fit-content" href="{{ path('app_post_edit', {'id': post.id}) }}">Edit</a>
+                        </div>
+                        <div class="card-footer">
+                            {% for tag in post.tags %}
+                                <span class="badge text-bg-primary">{{ tag.name }}</span>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
