--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
     </head>
     <body>
         {% for message in app.flashes('success') %}
-            <div class="alert alert-success">{{ message }}</div>
+            <div class="alert alert-success text-center">{{ message }}</div>
         {% endfor %}
         {% block body %}
         {% endblock %}
