--- a/templates/medecin/index.html.twig
+++ b/templates/medecin/index.html.twig
@@ -27,5 +27,8 @@
             {% endfor %}
             </tbody>
         </table>
+        <p>
+            <a href="{{ path('app_medecin_new') }}" class="btn btn-primary">Ajouter</a>
+        </p>
     </div>
 {% endblock %}
