--- a/templates/medecin/update.html.twig
+++ b/templates/medecin/update.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <h2 class="text-center my-4">Medecin Create</h2>
+        <h2 class="text-center my-4">Medecin Update</h2>
         <hr>
         {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
         {% if form_errors(form) %}
