--- a/templates/posts/edit.html.twig
+++ b/templates/posts/edit.html.twig
@@ -1,4 +1,9 @@
 {% extends 'base.html.twig' %}
+
+{% block javascripts %}
+    <script src="/js/tom-select.js" defer></script>
+{% endblock %}
+
 {% block body %}
 <div class="container">
     <h2 class="text-center my-4">Post</h2>
