--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <h2 class="text-center my-4">Post Listing</h2>
+        <h2 class="text-center my-4">Post Listing (Tom-Select)</h2>
         <hr>
         <div class="row">
             {% for post in posts %}
